# docs/static/openapi.yml
@@ -44,6 +44,37 @@ paths:
                   additionalProperties: {}
       tags:
         - Query
+  /tellor-io/layer/bridge/get_validator_checkpoint:
+    get:
+      operationId: LayerBridgeGetValidatorCheckpoint
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              validatorCheckpoint:
+                type: string
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      tags:
+        - Query
   /tellor-io/layer/bridge/params:
     get:
       summary: Parameters queries the parameters of the module.
@@ -2128,6 +2159,11 @@ definitions:
             power:
               type: string
               format: uint64
+  layer.bridge.QueryGetValidatorCheckpointResponse:
+    type: object
+    properties:
+      validatorCheckpoint:
+        type: string
   layer.bridge.QueryParamsResponse:
     type: object
     properties:
