# x/bridge/types/keys.go
@@ -17,6 +17,7 @@ const (
 )
 
 var (
-	ParamsKey       = collections.NewPrefix(0) // Prefix for params key
-	BridgeValsetKey = collections.NewPrefix(1) // Prefix for bridge_valset key
+	ParamsKey              = collections.NewPrefix(0) // Prefix for params key
+	BridgeValsetKey        = collections.NewPrefix(1) // Prefix for bridge_valset key
+	ValidatorCheckpointKey = collections.NewPrefix(2) // Prefix for validator_checkpoint key
 )
